--- a/view/preview/componentes.html
+++ b/view/preview/componentes.html
@@ -9,58 +9,64 @@
     <link rel="stylesheet" href="../../assets/css/preview/componentes.css">
 </head>
 <body>
-    <label for="">Teste</label>
+    <div class="preview-componentes">
+        <label for="">Teste</label>
 
-    <i title="Teste" class="fa-solid fa-circle-info"></i>
+        <i title="Teste" class="fa-solid fa-circle-info"></i>
 
-    <input type="text">
-
-    <input type="text" disabled>
-
-    <div style="display: flex; align-items: center;">
         <input type="text">
-        <button class="botao-busca"><i class="fa-solid fa-search"></i></button>
-    </div>
 
-    <div style="display: flex; align-items: center;">
         <input type="text" disabled>
-        <button class="botao-busca" disabled><i class="fa-solid fa-search"></i></button>
+
+        <label for="teste" class="input-checkbox">
+            <input type="checkbox" id="teste">Teste
+        </label>
+
+        <div style="display: flex; align-items: center;">
+            <input type="text">
+            <button class="botao-busca"><i class="fa-solid fa-search"></i></button>
+        </div>
+
+        <div style="display: flex; align-items: center;">
+            <input type="text" disabled>
+            <button class="botao-busca" disabled><i class="fa-solid fa-search"></i></button>
+        </div>
+
+        <input type="date">
+
+        <input type="date" disabled>
+
+        <input type="datetime-local">
+
+        <input type="datetime-local" disabled>
+
+        <select name="" id="">
+            <option value="">-----</option>
+            <option value="">Flávia</option>
+            <option value="">Guilherme</option>
+            <option value="">Helena</option>
+            <option value="">Weiller</option>
+        </select>
+
+        <select name="" id="" disabled>
+            <option value="">-----</option>
+            <option value="">Flávia</option>
+            <option value="">Guilherme</option>
+            <option value="">Helena</option>
+            <option value="">Weiller</option>
+        </select>
+
+        <textarea name="" id=""></textarea>
+
+        <textarea name="" id="" disabled></textarea>
+
+        <button class="botao-principal">Principal</button>
+            
+        <a class="botao-principal" href="">Principal</a>
+
+        <button class="botao-secundario">Secundário</button>
+
+        <a class="botao-secundario" href="">Secundário</a>
     </div>
-
-    <input type="date">
-
-    <input type="date" disabled>
-
-    <input type="datetime-local">
-
-    <input type="datetime-local" disabled>
-
-    <select name="" id="">
-        <option value="">-----</option>
-        <option value="">Flávia</option>
-        <option value="">Guilherme</option>
-        <option value="">Helena</option>
-        <option value="">Weiller</option>
-    </select>
-
-    <select name="" id="" disabled>
-        <option value="">-----</option>
-        <option value="">Flávia</option>
-        <option value="">Guilherme</option>
-        <option value="">Helena</option>
-        <option value="">Weiller</option>
-    </select>
-
-    <textarea name="" id=""></textarea>
-
-    <textarea name="" id="" disabled></textarea>
-
-    <button class="botao-principal">Principal</button>
-        
-    <a class="botao-principal" href="">Principal</a>
-
-    <button class="botao-secundario">Secundário</button>
-
-    <a class="botao-secundario" href="">Secundário</a>
 </body>
 </html>
